syntax = "proto3";

option csharp_namespace = "TokenApi.Proto";

package GameManagementApi;

service TokenManager {
	rpc CreateToken (CreateTokenRequest) returns (CreateTokenResponse);
	rpc Join (JoinTokenRequest) returns (JoinTokenResponse);
	rpc WaitMatch (MatchStatusRequest) returns (stream MatchStatusResponse);
}

message CreateTokenRequest {
	string username = 1;
}

message CreateTokenResponse {
	string token = 1;
}

message JoinTokenRequest {
	string username = 1;
	string token = 2;
}

message JoinTokenResponse {
}

message MatchStatusRequest {
	string username = 1;
	bool isMaster = 2;
}

message MatchStatusResponse {
	string matchId = 1;
	string status = 2;
}